Bug 1595572 - Remove NetworkConnectivityService.cpp MOZ_ASSERT("unknown request") r=kershaw

In a corner case race we might receive a notification from the wrong channel.
- mIPv4Channel is loading and calls nsHttpChannel::DoAuthRetry(NS_OK)
- RecheckDNS() is called and mIPv4Channel gets replaced
  we call Cancel for the old channel
- nsHttpChannel::ContinueDoAuthRetry is called, which calls OnStopRequest
  for the old channel
- We hit the assertion because we get the call for the wrong channel

Differential Revision: https://phabricator.services.mozilla.com/D61165

--HG--
extra : moz-landing-system : lando